tests/invalid_syn/syn16.java
class Main {
    static void run() {
        if (()) {
            return;
        }
    }
}